# axonmesh

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  images.yml  operator-e2e.yml
deploy/docker/: Dockerfile.cloud  Dockerfile.edge
deploy/helm/axonmesh-cloud/: Chart.yaml  values.yaml
deploy/helm/axonmesh-cloud/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml  servicemonitor.yaml
deploy/helm/axonmesh-operator/: Chart.yaml  values.yaml
deploy/helm/axonmesh-operator/crds/: splitinference.yaml
deploy/helm/axonmesh-operator/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  rbac.yaml  serviceaccount.yaml
deploy/helm/splitflow-cloud/: Chart.yaml  values.yaml
deploy/helm/splitflow-cloud/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml  servicemonitor.yaml
deploy/helm/yolosplit-cloud/: Chart.yaml  values.yaml
deploy/helm/yolosplit-cloud/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml  servicemonitor.yaml
deploy/kind/: e2e.sh
docs/: architecture.md  cascade.md  deployment.md  experiment-protocol.md  maintenance.md  roadmap.md  usage.md  validation.md
notebooks/: colab_validation.ipynb
operator/: Dockerfile
operator/examples/: cascade.yaml  splitinference.yaml
operator/manifests/: crd.yaml  operator.yaml  rbac.yaml
operator/splitinference/: __init__.py  handlers.py  render.py
operator/tests/: test_render.py
src/axonmesh/: __init__.py  allocate.py  bottleneck.py  calibrate.py  cascade.py  cli.py  edge.py  evaluate.py  model.py  planner.py  policy.py  protocol.py  replanning.py  server.py  split.py  sweep.py  topology.py  train.py
src/axonmesh/adapters/: fx.py
src/splitflow/: __init__.py  benchmark.py  bottleneck.py  cli.py  edge.py  evaluate.py  measure.py  model.py  planner.py  policy.py  replanning.py  server.py  split.py  transport.py
src/splitflow/adapters/: __init__.py  base.py  fx.py  ultralytics.py
src/yolosplit/: __init__.py  bottleneck.py  cli.py  edge.py  evaluate.py  model.py  planner.py  policy.py  protocol.py  quantize.py  replanning.py  server.py  split.py  stream.py  sweep.py  topology.py  train.py  transport.py
tests/: conftest.py  test_adapters.py  test_allocate.py  test_benchmark.py  test_bottleneck.py  test_calibrate.py  test_cascade.py  test_cli.py  test_evaluate.py  test_fx_adapter.py  test_measure.py  test_model.py  test_planner.py  test_policy.py  test_protocol.py  test_quantize.py  test_replanning.py  test_server_edge.py  test_split.py  test_stream.py  test_sweep.py  test_topology.py  test_transport.py
