[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yolosplit"
version = "0.5.0"
description = "Split computing experiments for YOLO11: cut the network after the backbone and ship quantised intermediate tensors instead of JPEG frames."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Luigi D'Antonio" }]
requires-python = ">=3.10"
keywords = ["split-computing", "edge-computing", "yolo", "quantization", "jetson"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "torch>=2.0",
    "ultralytics>=8.3",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
# The Kubernetes operator (operator/) — not needed to use yolosplit itself.
operator = [
    "kopf>=1.37",
    "kubernetes>=28",
]

[project.scripts]
yolosplit = "yolosplit.cli:main"

[project.urls]
Repository = "https://github.com/dantonioluigi/yolo-split-computing"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests", "operator/tests"]
pythonpath = ["operator"]
addopts = "-ra --cov=yolosplit --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning:ultralytics.*"]

[tool.coverage.run]
source = ["yolosplit"]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
