[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "axonmesh"
version = "0.8.0"
description = "Split inference for vision models: cut a network in two, run the first half on the edge, ship quantised intermediate tensors instead of frames, and finish in the cloud."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Luigi D'Antonio" }]
requires-python = ">=3.10"
keywords = ["split-computing", "edge-computing", "inference", "quantization", "kubernetes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "psutil>=5.9",
    "torch>=2.0",
    "tqdm>=4.65",
    "ultralytics>=8.3",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
# The Kubernetes operator (operator/) — not needed to use axonmesh itself.
operator = [
    "kopf>=1.37",
    "kubernetes>=28",
]

[project.scripts]
axonmesh = "axonmesh.cli:main"

[project.urls]
Repository = "https://github.com/dantonioluigi/axonmesh"

[tool.setuptools.packages.find]
where = ["src"]

# PEP 561: without this marker a consumer's type checker treats every symbol
# in this package as Any, however completely it is annotated here.
[tool.setuptools.package-data]
axonmesh = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"
# Notebooks are tutorial code with their own conventions (compact cells,
# shell/magic lines, display expressions); don't hold them to package style.
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests", "operator/tests"]
pythonpath = ["operator"]
addopts = "-ra --cov=axonmesh --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning:ultralytics.*"]

[tool.coverage.run]
source = ["axonmesh"]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
